syntax = "proto3";

import "common/common.proto";

option java_multiple_files = true;
option java_package = "com.mlorenzo.grpcflix.movie";

message MovieDto {
  string title = 1;
  int32 year = 2;
  double rating = 3;
}

message MovieSearchRequest {
  common.Genre genre = 1;
}

message MovieSearchResponse {
  repeated MovieDto movies = 1;
}

service MovieService {
  // Unary
  rpc getMovies(MovieSearchRequest) returns(MovieSearchResponse);
}